MSONZE-15 Aplicats els canvis al site-manage

--- a/src/sakai/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric_ca.properties
+++ b/src/sakai/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric_ca.properties
@@ -8,7 +8,7 @@ java.nosites=No heu seleccionat cap espai. Seleccioneu un o m\u00e9s espais.
 ### (moot) java.youhave = You have not checked any features for your site. You may do this by click the Back button or later by clicking Edit, then Add or remove features.
 java.please=Seleccioneu nom\u00e9s un espai per revisar a la vegada
 java.theemail=L'identificador del correu electr\u00f2nic ha d'estar format per car\u00e0cters alfanum\u00e8rics o qualsevol d'aquests s\u00edmbols \!\#$&'*+-
-java.sites={0} Espais
+java.sites= Espais tipus ''{0}''
 java.new=Nou
 java.newgroup=Afegeix
 java.revise=Revisa
@@ -439,7 +439,8 @@ nscourse.select_group_sections=Selecciona un grup de seccions
 nscourse.unselect_group_sections=Deselecciona un grup de seccions
 
 nscourse.no_sections_in_term=No teniu cap secci\u00f3 corresponent al per\u00edode seleccionat. Torneu enrere i seleecioneu un altre per\u00edode.
-nscourse.manual_disabled=Aquesta caracter\u00edstica s'ha deshabilitat a tot el sistema. Contacteu el servei de suport per obtenir m\u00e9s informaci\u00f3.
+nscourse.manual_disabled = No teniu cap secci\u00f3 que pugueu agfegir al curs i la configuraci\u00f3 manual s'ha deshabilitat a tot el sistema. Contacteu el servei de suport per obtenir m\u00E9s informaci\u00F3.
+
 
 #Manual Vm
 ### (moot) man.creat = Creating a New Class Site
@@ -1144,6 +1145,27 @@ sitegen.roledescription.Instructor=Pot llegir, revisar, eliminar i afegir tant c
 sitegen.roledescription.access=Pot llegir els continguts de l'espai i afegir-ne quan sigui apropiat.
 sitegen.roledescription.Student=Pot llegir els continguts de l'espai i afegir-ne quan sigui apropiat.
 sitegen.roledescription.TeachingAssistant=Pot llegir, afegir i revisar la major part dels continguts de les seves seccions. 
+sitegen.roledescription.Administrador     = Can read, revise, and delete content, edit the site and add participants to it.
+sitegen.roledescription.Baixa             = Without access to the site, identifies previous participants. 
+sitegen.roledescription.Coordinador       = Can read, revise, and delete content, edit the site and add participants to it.
+### Role description ###
+sitegen.roledescription.Docent            = Can read and revise content.
+### Role description ###
+sitegen.roledescription.Editor            = Can read and revise content, and edit the site.
+sitegen.roledescription.Estudiant         = Can read content, and add content to a site where appropriate. 
+sitegen.roledescription.Erasmus	 	      = Can read content, and add content to a site where appropriate. (They are students that are enrolled in the course but in other university).
+sitegen.roledescription.Instructor        = Can read, revise, delete and add both content and participants to a site. 
+sitegen.roledescription.Participant       = Can read content, and add content to a site where appropriate. 
+sitegen.roledescription.Professor         = Can read, revise, delete and add both content and participants to a site. 
+sitegen.roledescription.Professorajudant = Can read, add, and revise most content in their sections.
+sitegen.roledescription.Professordepr\uFFFDctiques = Can read, add, and revise most content in their sections.
+sitegen.roledescription.Student           = Can read content, and add content to a site where appropriate. 
+sitegen.roledescription.TeachingAssistant = Can read, add, and revise most content in their sections.
+sitegen.roledescription.Convidat = Can read some content but not participate in assignments, forums, messages, etc.
+### Role description ###
+sitegen.roledescription.Tutor             = Can read and revise content.
+sitegen.roledescription.access            = Can read content, and add content to a site where appropriate. 
+### Role description ###
 ##Additional site info
 sitegen.siteinfolist.modify=Data de modificaci\u00f3
 sitegen.siteinfolist.usermodify=Modificat per
@@ -1246,3 +1268,39 @@ sitegen.sitedel.hard=NOTA\: Si escolliu l'opci\u00f3 d'eliminaci\u00f3 no recupe
 sitegen.sitedel.hard.button=Eliminaci\u00f3 no recuperable
 
 import.newtool=Nota\: Si escolliu d'importar continguts de les eines marcades amb + les eines s'afegiran al vostre espai.
+
+
+#per als tipus de sites
+site.type.course                          = curs
+site.type.project                         = projecte
+site.type.projectedocent                  = projecte docent
+
+sitetype.actualnumofprojects             = Creat(s) {0} espai(s) de {1} disponible(s)  
+sitetype.maxnumofprojects                = Ja ha creat el m\u00E0xim nombre d''espais ({0}) de tipus Projecte
+
+sitedicla.alert                    = Av\u00EDs:
+sitedicla.can                      = Cancel\u00B7la
+sitedicla.cancel                   = Cancel\u00B7la
+sitedicla.choose_file              = Escolliu el fitxer per importar
+sitedicla.choose_materials         = Escolliu material per a copiar aquest espai.
+sitedicla.class                    = Orla
+sitedicla.copy_materials           = Copia materials d'altres espais
+sitedicla.copy_message             = Ara escolliu els materials que vulgueu reutilitzar (copiar) d'altres que siguin propietat vostra.Si escolliu importar materials d'un fitxer, nom\u00E9s podeu copiar materials d'un espai.Es copien tots els materials i no s'actualitzen totes les dates corresponents a aquestes elements.
+sitedicla.copybtn                  = Copia els materials
+sitedicla.copying                  = Copia el material de...
+sitedicla.edit_roster              = Edita l'acc\u00E9s a l'orla per 
+sitedicla.edit_roster_announcement = La nova versi\u00F3 del campus us permet administrar i organitzar millor els espais docents dels quals sou responsables, i en definitiva, podeu seleccionar els grups d'alumnat que n'hagin de formar part, entre d'altres aspectes. Aquesta gesti\u00F3 de grups t\u00E9 sentit en tot un seguit de casos d'\u00FAs qu\u00E8 us expliquem a l'<a href="/cvhelp/app/htmls/gestioGrupsCV.html" target="_blank">ajuda</a>.
+sitedicla.file                     = Fitxer:
+sitedicla.import                   = Importa
+sitedicla.import_materials         = Importa els materials d'un fitxer d'arxiu d'espais
+sitedicla.move                     = Mou
+sitedicla.move_into                = ...al meu espai actual
+sitedicla.rem                      = Suprimeix
+sitedicla.requested                = (sol\u00B7licitat)
+sitedicla.tabhol                   = La taula cont\u00E9 la informaci\u00F3 de les classes de l'espai.
+sitedicla.theis                    = No hi ha cap classe assignada a aquest espai
+sitedicla.upd                      = Actualitza
+sitedicla.yet                      = ja
+
+sitegen.siteinfolist.deleteClassWarning	  = Esteu segurs que voleu eliminar aquesta orla? Els participants d'aquest grup deixaran de tenir acc\u00E9s a l'espai. Si necessiteu m\u00E9s informaci\u00F3 sobre com reorganitzar l'espai contacteu abans amb el suport de campus virtual o consulteu l'Ajuda del campus virtual.
+
