--- a/src/sakai/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric_es.properties
+++ b/src/sakai/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric_es.properties
@@ -439,7 +439,7 @@ nscourse.select_group_sections=Seleccionar conjunto de Grupos
 nscourse.unselect_group_sections=Deseleccionar conjunto de Grupos
 
 nscourse.no_sections_in_term=No tiene ninguna secci\u00f3n en el periodo seleccionado. Por favor vuelva y seleccione un periodo diferente.
-nscourse.manual_disabled=Esta caracter\u00edstica se ha desactivado en todo el sistema. Para m\u00e1s informaci\u00f3n por favor p\u00f3ngase en contacto con soporte.
+nscourse.manual_disabled=No tiene ninguna secci\u00f3n en el periodo seleccionado y la configuraci\u00f3n manual se ha desactivado en todo el sistema. Para m\u00e1s informaci\u00f3n por favor p\u00f3ngase en contacto con soporte.
 
 #Manual Vm
 ### (moot) man.creat = Creating a New Class Site
@@ -1138,12 +1138,29 @@ check.all.part=Seleccionar/deseleccionar todos los participantes
 noterm_class=Ning\n listado de notas que le muestre como profesor se ha encontrado para los periodos seleccionados.
 
 java.couldntlocate=El sitio con el identificador {0} no se encuentra. Por favor, contacte con el administrador para que le ayude.
-### Role description ###
-sitegen.roledescription.maintain=Puede leer, revisar, borrar y a\u00f1adir tanto contenidos como participantes al espacio.
-sitegen.roledescription.Instructor=Puede leer, revisar, borrar y a\u00f1adir tanto contenidos como participantes al espacio.
-sitegen.roledescription.access=Puede leer contenidos y a\u00f1adirlos en partes del espacio.
-sitegen.roledescription.Student=Puede leer contenidos y a\u00f1adirlos en partes del espacio.
-sitegen.roledescription.TeachingAssistant=Puede leer, a\u00f1adir y revisar gran parte del contenido y sus secciones.
+### Descripcion de los roles
+sitegen.roledescription.Administrador     = Puede leer, revisar, borrar contenidos, editar el espacio y a\u00F1adirle participantes.
+sitegen.roledescription.Baixa             = Ya no puede acceder al espacio, sirve para identificar usuaris que han sido participantes. 
+sitegen.roledescription.Coordinador       = Puede leer, revisar, borrar contenidos, editar el espacio y a\u00F1adirle participantes.
+### Descripcion de los roles
+sitegen.roledescription.Docent            = Puede leer i modificar contenidos del espacio.
+### Descripcion de los roles
+sitegen.roledescription.Editor            = Puede leer y revisar contenidos y editar el espacio.
+sitegen.roledescription.Estudiant         = Puede leer contenidos y a\u00F1adirlos en partes del espacio.
+sitegen.roledescription.Instructor        = Puede leer, revisar, borrar y a\u00F1adir tanto contenidos como participantes al espacio.
+sitegen.roledescription.Participant       = Puede leer contenidos y a\u00F1adirlos en partes del espacio.
+sitegen.roledescription.Professor         = Puede leer, revisar, borrar y a\u00F1adir tanto contenidos como participantes al espacio.
+sitegen.roledescription.Professorajudant = Puede leer, a\u00F1adir y revisar gran parte del contenido de sus grupos.
+sitegen.roledescription.Professordepr\uFFFDctiques = Puede leer, a\u00F1adir y revisar gran parte del contenido de sus grupos.
+sitegen.roledescription.Student           = Puede leer contenidos y a\u00F1adirlos en partes del espacio.
+sitegen.roledescription.Erasmus           = Puede leer contenidos y a\u00F1adirlos en partes del espacio. (Son alumnos de la UdL que cursan la asignatura en otra universidad)
+sitegen.roledescription.TeachingAssistant = Puede leer, a\u00F1adir y revisar gran parte del contenido y sus secciones.
+sitegen.roledescription.Convidat			= Puede leer contenidos pero no puede participar en tareas, foros, etc.
+### Descripcion de los roles
+sitegen.roledescription.Tutor             = Puede leer i modificar contenidos del espacio.
+sitegen.roledescription.access            = Puede leer contenidos y a\u00F1adirlos en partes del espacio.
+### Descripcion de los roles
+
 ##Additional site info
 sitegen.siteinfolist.modify=Fecha de Modificaci\u00f3n
 sitegen.siteinfolist.usermodify=Modificado por
@@ -1246,3 +1263,37 @@ sitegen.sitedel.hard=NOTA\: Ha seleccionado Borrar definitivamente, por lo que s
 sitegen.sitedel.hard.button=Borrar definitivamente
 
 import.newtool=Nota\: Si elige importar contenido de las herramientas marcadas con un +, las herramientas se a\u00f1adir\u00e1n a su sitio.
+
+site.type.course                          = curso
+site.type.project                         = proyecto
+site.type.projectedocent                  = proyecto docente 
+
+sitetype.actualnumofprojects             = Creado(s) {0} espacio(s) de {1} disponible(s)  
+sitetype.maxnumofprojects                = Ya ha creado el m\u00E1ximo n\u00FAmero de espacios ({0}) de tipo Proyecto
+
+sitedicla.alert                    = Alerta:
+sitedicla.can                      = Cancelar
+sitedicla.cancel                   = Cancelar
+sitedicla.choose_file              = Elija el fichero a importar
+sitedicla.choose_materials         = Elija el material de este sitio que desea copiar.
+sitedicla.class                    = Lista
+sitedicla.copy_materials           = Copiar materiales de otros sitios
+sitedicla.copy_message             = Ahora escoja los materiales que desea reutilizar (copiar) de otros sitios de su propiedad. \nSi escoge importar materiales desde un fichero, solo podr\u00E1 copiar materiales de un sitio. \nTodos los materiales se copiar\u00E1n literalmente, sin actualizar las fechas asociadas.
+sitedicla.copybtn                  = Copiar materiales
+sitedicla.copying                  = Copiar el material de...
+sitedicla.edit_roster              = Editar las listas que tienen acceso a 
+sitedicla.edit_roster_announcement = La nueva versi\u00F3n del campus os permite administrar i organizar mejor los espacios docentes en los que sois responsables, i en definitiva, podeis seleccionar los grupos de clase del espacio, entre otros aspectos. Esta gesti\u00F3n de grupos tiene sentido dentro de unos casos de uso los cuales se detallan en la <a href="/cvhelp/app/htmls/gestioGrupsCV.html" target="_blank">ayuda</a> del campus.
+sitedicla.file                     = Fichero:
+sitedicla.import                   = Importar
+sitedicla.import_materials         = Importar materiales desde un fichero
+sitedicla.move                     = Mover
+sitedicla.move_into                = ...en el sitio actual
+sitedicla.rem                      = Borrar
+sitedicla.requested                = (solicitado)
+sitedicla.tabhol                   = La tabla tiene informaci\u00F3n sobre los sitios de cursos
+sitedicla.theis                    = No hay clases asignadas al sitio
+sitedicla.upd                      = Actualizar
+sitedicla.yet                      = ya
+
+sitegen.siteinfolist.deleteClassWarning	  Est\u00E1 seguro que quiere eliminar esta orla? Los participantes del grupo dejar\u00E1n de tener acceso al sitio. Si necessita m\u00E1s informaci\uFFFD acerca de como reorganizar el sitio consulte con el soporte del campus virtual o consulte la ayuda del campus. 
+
