MSONZE-37 Canviada la url de ajuda extra a site-manage

--- a/src/sakai/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric_es.properties
+++ b/src/sakai/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric_es.properties
@@ -1282,7 +1282,7 @@ sitedicla.copy_message             = Ahora escoja los materiales que desea reuti
 sitedicla.copybtn                  = Copiar materiales
 sitedicla.copying                  = Copiar el material de...
 sitedicla.edit_roster              = Editar las listas que tienen acceso a 
-sitedicla.edit_roster_announcement = La nueva versi\u00F3n del campus os permite administrar i organizar mejor los espacios docentes en los que sois responsables, i en definitiva, podeis seleccionar los grupos de clase del espacio, entre otros aspectos. Esta gesti\u00F3n de grupos tiene sentido dentro de unos casos de uso los cuales se detallan en la <a href="/cvhelp/app/htmls/gestioGrupsCV.html" target="_blank">ayuda</a> del campus.
+sitedicla.edit_roster_announcement = La nueva versi\u00F3n del campus os permite administrar i organizar mejor los espacios docentes en los que sois responsables, i en definitiva, podeis seleccionar los grupos de clase del espacio, entre otros aspectos. Esta gesti\u00F3n de grupos tiene sentido dentro de unos casos de uso los cuales se detallan en la <a href="https://cvcms.udl.cat/herramientas/anadir-un-grupo-nuevo-planificado-a-un-espacio/" target="_blank">ayuda</a> del campus.
 sitedicla.file                     = Fichero:
 sitedicla.import                   = Importar
 sitedicla.import_materials         = Importar materiales desde un fichero
