MSONZE-37 Corregit un error en la url

--- a/src/sakai/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric_ca.properties
+++ b/src/sakai/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric_ca.properties
@@ -1289,7 +1289,7 @@ sitedicla.copy_message             = Ara escolliu els materials que vulgueu reut
 sitedicla.copybtn                  = Copia els materials
 sitedicla.copying                  = Copia el material de...
 sitedicla.edit_roster              = Edita l'acc\u00E9s a l'orla per 
-sitedicla.edit_roster_announcement = La nova versi\u00F3 del campus us permet administrar i organitzar millor els espais docents dels quals sou responsables, i en definitiva, podeu seleccionar els grups d'alumnat que n'hagin de formar part, entre d'altres aspectes. Aquesta gesti\u00F3 de grups t\u00E9 sentit en tot un seguit de casos d'\u00FAs qu\u00E8 us expliquem a l'<a href="https://http://cvcms.udl.cat/ca/eines/afegir-un-grup-nou-planificat-a-un-espai" target="_blank">ajuda</a>.
+sitedicla.edit_roster_announcement = La nova versi\u00F3 del campus us permet administrar i organitzar millor els espais docents dels quals sou responsables, i en definitiva, podeu seleccionar els grups d'alumnat que n'hagin de formar part, entre d'altres aspectes. Aquesta gesti\u00F3 de grups t\u00E9 sentit en tot un seguit de casos d'\u00FAs qu\u00E8 us expliquem a l'<a href="https://cvcms.udl.cat/ca/eines/afegir-un-grup-nou-planificat-a-un-espai" target="_blank">ajuda</a>.
 sitedicla.file                     = Fitxer:
 sitedicla.import                   = Importa
 sitedicla.import_materials         = Importa els materials d'un fitxer d'arxiu d'espais
