MSONZE-18 MSONZE-19 Titles and web tools uploaded

--- a/src/sakai/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
+++ b/src/sakai/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
@@ -251,3 +251,18 @@ sakai.adminsiteperms.description=Allows adminstrators to control permissions for
 
 sakai.gradebookng = Gradebook
 
+sakai.guiadocent.ice.description                    = Academic guide UdL
+sakai.guiadocent.ice.title                          = Academic guide UdL
+
+sakai.bbb.description                               = Tool to schedule videoconference sessions on Big Blue Button
+sakai.bbb.title                                     = Videoconference
+
+sakai.iframe.actes.description                      = Official Grades sites access page
+sakai.iframe.actes.title                            = Official Grades
+sakai.iframe.expedient.description                  = Academic record site access page
+sakai.iframe.expedient.title                        = Academic record
+sakai.iframe.intranet.description                   = Intranet sites access page
+sakai.iframe.intranet.title                         = Intranet
+sakai.iframe.utilitats.description                  = Utilities page
+sakai.iframe.utilitats.title                        = Utilities           
+
