--- a/src/sakai/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools_ca.properties
+++ b/src/sakai/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools_ca.properties
@@ -166,7 +166,7 @@ sakai.su.description=Eina per suplantar usuaris
 sakai.su.title=Suplantaci\u00f3 d'usuaris
 sakai.summary.calendar.description=Mostra un resum dels esdeveniments de l'agenda a l'espai personal
 sakai.summary.calendar.title=Agenda
-sakai.syllabus.description=Programaci\u00f3 acad\u00e8mica
+sakai.syllabus.description=Programaci\u00f3 del curs
 sakai.syllabus.title=Programaci\u00f3
 sakai.synoptic.announcement.description=Mostra anuncis recents i els actualitza a mesura que arriben els missatges
 sakai.synoptic.announcement.title=Anuncis recents
@@ -251,3 +251,18 @@ sakai.adminsiteperms.description=Permet als administradors controlar els permiso
 
 sakai.gradebookng=Qualificacions
 
+#Eines UdL
+sakai.iframe.expedient.description                  = P\u00E0gina d'acc\u00E9s a l'expedient
+sakai.iframe.expedient.title                        = Expedient
+sakai.iframe.intranet.description                   = P\u00E0gina d'acc\u00E9ss als espais Intranet
+sakai.iframe.intranet.title                         = Intranet
+sakai.iframe.utilitats.description                  = P\u00E0gina d'acc\u00E9ss a utilitats
+sakai.iframe.utilitats.title                        = Utilitats
+sakai.iframe.actes.description                  	= P\u00E0gina d'acc\u00E9ss a les Actes
+sakai.iframe.actes.title   							= Actes
+
+sakai.guiadocent.ice.description                    = Guia docent UdL
+sakai.guiadocent.ice.title                          = Guia docent UdL
+
+sakai.bbb.description                               = Planifica sessions de videoconfer\u00E8ncia al servei Big Blue Button
+sakai.bbb.title    
