--- a/src/sakai/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools_es.properties
+++ b/src/sakai/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools_es.properties
@@ -250,4 +250,18 @@ sakai.adminsiteperms.title=Sincronizaci\u00f3n de Perfiles
 sakai.adminsiteperms.description=Permite a los administradores controlar los permisos para todos los sitios de un tipo y los roles dentro de ese sitio.
 
 sakai.gradebookng=Calificaciones
+sakai.iframe.expedient.description                  = P\u00E1gina de acceso al espacio de Expediente
+sakai.iframe.expedient.title                        = Expediente
+sakai.iframe.intranet.description                   = P\u00E1gina de acceso a los espacios de Intranet
+sakai.iframe.intranet.title                         = Intranet
+sakai.iframe.utilitats.description                  = P\u00E1gina de acceso a utilidades 
+sakai.iframe.utilitats.title                        = Utilidades
+sakai.iframe.actes.description                   	= P\u00E1gina de acceso a las Actas
+sakai.iframe.actes.title   							= Actas
+
+sakai.guiadocent.ice.description                    = Gu\u00EDa docente UdL
+sakai.guiadocent.ice.title                          = Gu\u00EDa docente UdL
+
+sakai.bbb.description                               = Planifica sessiones de videoconferencia al servicio Big Blue Button
+sakai.bbb.title   
 
