MSONZE-19 Titles of BBB tool

--- a/src/sakai/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools_ca.properties
+++ b/src/sakai/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools_ca.properties
@@ -265,4 +265,4 @@ sakai.guiadocent.ice.description                    = Guia docent UdL
 sakai.guiadocent.ice.title                          = Guia docent UdL
 
 sakai.bbb.description                               = Planifica sessions de videoconfer\u00E8ncia al servei Big Blue Button
-sakai.bbb.title    
+sakai.bbb.title										= Videoconfer\u00E8ncia    
