--- a/src/sakai/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools_es.properties
+++ b/src/sakai/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools_es.properties
@@ -263,5 +263,5 @@ sakai.guiadocent.ice.description                    = Gu\u00EDa docente UdL
 sakai.guiadocent.ice.title                          = Gu\u00EDa docente UdL
 
 sakai.bbb.description                               = Planifica sessiones de videoconferencia al servicio Big Blue Button
-sakai.bbb.title   
+sakai.bbb.title   									= Videoconferencia
 
