--- a/src/sakai/gradebook/app/ui/src/bundle/org/sakaiproject/tool/gradebook/bundle/Messages.properties
+++ b/src/sakai/gradebook/app/ui/src/bundle/org/sakaiproject/tool/gradebook/bundle/Messages.properties
@@ -198,6 +198,7 @@ course_grade_details_grade_display={0} ({1}%)
 course_grade_details_export_label=Export grades as
 course_grade_details_export_course_grades_options=Data options
 course_grade_details_export_course_grades_options_userid=Student ID
+course_grade_details_export_course_grades_options_dni=DNI
 course_grade_details_export_course_grades_options_username=Student Name
 course_grade_details_export_course_grades_options_finalscore=Points
 course_grade_details_export_course_grades_options_calcgrade=Calculated Grade
@@ -246,6 +247,7 @@ export_gradebook_prefix=gradebook
 export_course_grade_prefix=course_grade
 export_student_name=Student Name
 export_student_id=Student ID
+export_dni=DNI
 export_points_possible=Points Possible
 export_dropped=Dropped
 
