--- a/src/sakai/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication_ca.properties
+++ b/src/sakai/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication_ca.properties
@@ -1,8 +1,8 @@
 app.title=Qualificacions
 
-format.date=mm/dd/aaaa
-label.date=mm/dd/aaaa
-format.datetime=MM/dd/aaaa HH\:mm
+format.date=dd/MM/yyyy
+label.date=dd/mm/aaaa
+format.datetime=dd/MM/yyyy HH\:mm
 
 link.gradebook=Qualificacions
 link.gradebook.tooltip=Qualificacions
