MSU-10 Fer que el link que es mostra als missatges porti al missatge privat en concret

--- a/src/sakai/msgcntr/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_ca.properties
+++ b/src/sakai/msgcntr/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_ca.properties
@@ -859,3 +859,6 @@ rank_assign_recipients_selected=destinataris seleccionats
 rank_assign_button_cancel=Cancel\u00b7la
 rank_assign_button_update=Actualitza els membres
 cdfm_not_selected_topic=Cal que escolliu un f\u00f2rum i un tema on moure la conversa
+
+loading_direct_access=Carregant el missatge...
+error_direct_access=S'ha produ\u00EFt un error carregant el missatge
