--- a/src/sakai/msgcntr/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
+++ b/src/sakai/msgcntr/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
@@ -859,3 +859,6 @@ rank_assign_recipients_selected=miembros seleccionados
 rank_assign_button_cancel=Cancelar
 rank_assign_button_update=Actualizar miembros
 cdfm_not_selected_topic=Debe elegir el foro y tema al que quiere mover la conversaci\u00f3n.
+
+loading_direct_access=Cargando mensaje...
+error_direct_access=Error al cargar el mensaje
