MSU-8 Afegir a la barra d'eina un botó nou que porti a l'apartat de configurar noves eines dins de l'espai

--- a/src/sakai/portal/portal-impl/impl/src/bundle/sitenav_es.properties
+++ b/src/sakai/portal/portal-impl/impl/src/bundle/sitenav_es.properties
@@ -50,7 +50,7 @@ sit_edit=Editar
 sit_reset=P\u00e1gina de inicio de la herramienta
 sit_unpublished=Sitio no publicado
 sit_publish_now=(Publicar Ahora)
-sit_addmoretools=A\u00f1adir Herramienta
+sit_addmoretools=A\u00f1adir otras herramientas
 sit_allsites=Ver todos los sitios
 sit_alltools=Ver todas ...
 sit_newsite=Crear Nuevo Sitio
