--- a/src/sakai/portal/portal-impl/impl/src/bundle/sitenav_ca.properties
+++ b/src/sakai/portal/portal-impl/impl/src/bundle/sitenav_ca.properties
@@ -50,7 +50,7 @@ sit_edit=Edita
 sit_reset=P\u00e0gina d'inici de l'eina
 sit_unpublished=Espai no publicat
 sit_publish_now=(Publica-ho ara)
-sit_addmoretools=Afegeix una eina
+sit_addmoretools=Afegeix altres eines
 sit_allsites=Mostra tots els espais
 sit_alltools=Mostra'ls tots...
 sit_newsite=Crea un espai nou
