MSU-4 Canvis bundles dropbox  (#49)
* Canvis bundles dropbox  es i en MSU-4

* Canvis bundles dropbox  es i en MSU-4

--- a/src/sakai/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/content/content_es.properties
+++ b/src/sakai/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/content/content_es.properties
@@ -37,7 +37,7 @@ access.group=Seleccionar grupo(s)
 access.group1=Visible a los grupos seleccionados\: {0}
 access.public=P\u00fablico
 access.public1=Visible al p\u00fablico
-access.dropbox=Carpeta personal
+access.dropbox=Espacio Compartido
 access.dropbox1=Visible a ambos\: profesor y estudiante
 
 access.title1=Acceso
@@ -239,7 +239,7 @@ gen.created=Creado por
 gen.created1=Creado Por
 gen.creatime=Hora de creaci\u00f3n
 gen.description=Descripci\u00f3n
-gen.drop=Drop Box
+gen.drop=Espacio Compartido
 gen.email1=Noticaci\u00f3n por correo electr\u00f3nico
 gen.email2=Alto . Todos los participantes
 gen.email3=Bajo - S\u00f3lo participantes que han optado a ello
@@ -452,7 +452,7 @@ sh.close=Cerrar esta carpeta
 sh.closed=Elegir carpeta
 sh.copied=copiar - pegar?
 sh.cut=corta - pegar?
-sh.drop=drop box
+sh.drop=espacio compartido
 sh.get=Obtener informaci\u00f3n de este elemento
 sh.go=Ir a esta carpeta
 sh.inf=Informaci\u00f3n de esta colecci\u00f3n
