--- a/src/sakai/content/content-bundles/resources/content_es.properties
+++ b/src/sakai/content/content-bundles/resources/content_es.properties
@@ -52,7 +52,7 @@ access.site1=Visible al sitio completo
 access.group=Seleccionar grupo(s)
 access.group1=Visible a los grupos seleccionados\: {0}
 access.group.missing=Grupos no encontrados
-access.dropbox=Carpeta personal
+access.dropbox=Espacio Compartido
 access.dropbox1=Visible para instructor y estudiante
 
 # Definitions for roles based on their ids. .anon is the roleid for pubview / public access.
@@ -258,7 +258,7 @@ gen.created=Creado por
 gen.created1=Creado por
 gen.creatime=Hora de creaci\u00f3n
 gen.description=Descripci\u00f3n
-gen.drop=Drop Box
+gen.drop=Espacio Compartido
 gen.email1=Noticaci\u00f3n por correo electr\u00f3nico
 gen.email2=Alto . Todos los participantes
 gen.email3=Bajo - S\u00f3lo participantes que han optado a ello
@@ -331,7 +331,7 @@ list.sPerm=Permisos
 list.select=Marcar Todos
 list.show=Mostrar otros sitios
 list.site=Recursos del sitio
-list.site.dropbox=Lista de carpetas personales
+list.site.dropbox=Lista de espacios compartidos
 list.toobig=Esta colecci\u00f3n es demasiado grande para expandirla.
 list.unselect=De-seleccionar todos
 list.ame=Acciones fin men\u00fa
@@ -453,7 +453,7 @@ sh.close=Cerrar esta carpeta
 sh.closed=Elegir carpeta
 sh.copied=copiar - pegar?
 sh.cut=corta - pega?
-sh.drop=drop box
+sh.drop=espacio compartido
 sh.get=Obtener informaci\u00f3n de este elemento
 sh.go=Ir a esta carpeta
 sh.inf=Informaci\u00f3n de esta colecci\u00f3n
