--- a/src/sakai/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/siteemacon/siteemacon_en_GB.properties
+++ b/src/sakai/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/siteemacon/siteemacon_en_GB.properties
@@ -30,11 +30,11 @@ this = This automatic notification message was sent by
 
 youcan = You can modify how you receive notifications at Home > Preferences.
 
-db.subj.upd = [ {0} - Dropbox item changed in "{1}" ] {2}
-db.subj.new = [ {0} - New dropbox item in "{1}" ] {2}
+db.subj.upd = [ {0} - Shared Space item changed in "{1}" ] {2}
+db.subj.new = [ {0} - New shared space item in "{1}" ] {2}
 
-db.text.upd = A resource has been updated in the dropbox for "{0}" in the "{1}" site at {2} ({3}) 
-db.text.new = A new resource has been added to the dropbox for "{0}" in the "{1}" site at {2} ({3}) 
+db.text.upd = A resource has been updated in the shared space for "{0}" in the "{1}" site at {2} ({3}) 
+db.text.new = A new resource has been added to the shared space for "{0}" in the "{1}" site at {2} ({3}) 
 
-db.text.location = Location: site "{0}" > Drop Box {1} > {2} 
-db.text.prefs = This automatic notification message was sent by {0} ({1}) from the dropbox in the {2} site. You can modify how you receive notifications at Home > Preferences.
+db.text.location = Location: site "{0}" > Shared Space {1} > {2} 
+db.text.prefs = This automatic notification message was sent by {0} ({1}) from the shared space in the {2} site. You can modify how you receive notifications at Home > Preferences.
