--- a/src/sakai/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/siteemacon/siteemacon_es.properties
+++ b/src/sakai/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/siteemacon/siteemacon_es.properties
@@ -40,15 +40,15 @@ this=Este mensaje de notificaci\u00f3n autom\u00e1tica ha sido enviado por
 
 youcan=Puede modificar c\u00f3mo recibir\u00e1 las notificaciones en Mi Sitio > Preferencias.
 
-db.subj.upd=[ {0} - Ha cambiado un elemento en Carpeta Personal "{1}" ] {2}
-db.subj.new=[ {0} - Nuevo elemento en Carpeta Personal "{1}" ] {2}
-db.subj.upd.dnd=[{0} - Elementos modificados en la carpeta "{1}" de Carpeta Personal ]
-db.subj.new.dnd=[{0} - Nuevos elementos subidos en la carpeta "{1}" de Carpeta Personal ]
+db.subj.upd=[ {0} - Ha cambiado un elemento en Espacio Compartido "{1}" ] {2}
+db.subj.new=[ {0} - Nuevo elemento en Espacio Compartido "{1}" ] {2}
+db.subj.upd.dnd=[{0} - Elementos modificados en la carpeta "{1}" de Espacio Compartido ]
+db.subj.new.dnd=[{0} - Nuevos elementos subidos en la carpeta "{1}" de Espacio Compartido ]
 
-db.text.upd=Se ha actualizado un recurso en la Carpeta Personal de "{0}" en el sitio "{1}" en {2} ({3})
-db.text.new=Se ha a\u00f1adido un recurso en el Carpeta Personal de "{0}" en el sitio "{1}" en {2} ({3})
-db.text.upd.dnd=Se han actualizado varios recursos en el Carpeta Personal de "{0}" en el sitio "{1}" en {2} ({3})
-db.text.new.dnd=Se han a\u00f1adido varios recursos en la Carpeta Personal de "{0}" en el sitio "{1}" en {2} ({3})
+db.text.upd=Se ha actualizado un recurso en la Espacio Compartido de "{0}" en el sitio "{1}" en {2} ({3})
+db.text.new=Se ha a\u00f1adido un recurso en el Espacio Compartido de "{0}" en el sitio "{1}" en {2} ({3})
+db.text.upd.dnd=Se han actualizado varios recursos en el Espacio Compartido de "{0}" en el sitio "{1}" en {2} ({3})
+db.text.new.dnd=Se han a\u00f1adido varios recursos en la Espacio Compartido de "{0}" en el sitio "{1}" en {2} ({3})
 
-db.text.location=Ubicaci\u00f3n\: sitio "{0}" > Carpeta Personal {1} > {2}
-db.text.prefs=Este mensaje de notificaci\u00f3n autom\u00e1tica fue enviado por {0} ({1}) desde Carpeta Personal del sitio {2} . Puede modificar el modo en que recibe las notificaciones desde Mi Sitio > Preferencias.
+db.text.location=Ubicaci\u00f3n\: sitio "{0}" > Espacio Compartido {1} > {2}
+db.text.prefs=Este mensaje de notificaci\u00f3n autom\u00e1tica fue enviado por {0} ({1}) desde Espacio Compartido del sitio {2} . Puede modificar el modo en que recibe las notificaciones desde Mi Sitio > Preferencias.
