--- a/src/sakai/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools_es.properties
+++ b/src/sakai/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools_es.properties
@@ -48,7 +48,7 @@ sakai.createuser.title=Nueva cuenta
 sakai.discussion.description=Conversaciones escritas
 sakai.discussion.title=Foros
 sakai.dropbox.description=Compartici\u00f3n privada de ficheros entre estudiantes y profesorado
-sakai.dropbox.title=Carpeta personal
+sakai.dropbox.title=Espacio compartido
 sakai.feedback.title=Contacte con nosotros
 sakai.feedback.description=Herramienta de informes sobre el contenido del sitio y la funcionalidad.
 sakai.filepicker.description=File Picker Helper
