--- a/src/sakai/content/content-tool/tool/src/bundle/dropbox_es.properties
+++ b/src/sakai/content/content-tool/tool/src/bundle/dropbox_es.properties
@@ -1,3 +1,3 @@
 # descriptions for dropbox entities
-dropbox=Representa la herramienta de Dropbox
-dropbox.action.site=Consigue los art\u00edculos de dropbox para un sitio  y usuario determinado. La URL debe ser de esta forma /direct/dropbox/site/SITEID/user/EID.format.
+dropbox=Representa la herramienta del Espacio Compartido
+dropbox.action.site=Consigue los art\u00edculos del espacio compartido para un sitio  y usuario determinado. La URL debe ser de esta forma /direct/dropbox/site/SITEID/user/EID.format.
