MSU-16 : Canviar les traduccions de Urkund de castella i anglès per a que siguin traduccions literals de les modificacions fetes en català. (#51)

--- a/src/sakai/assignment/assignment-bundles/resources/assignment_es.properties
+++ b/src/sakai/assignment/assignment-bundles/resources/assignment_es.properties
@@ -237,8 +237,8 @@ gen.thearecur1=No hay tareas en esta ubicaci\u00f3n.
 gen.thearecur2=No hay env\u00edos en esta ubicaci\u00f3n.
 gen.theassall4=Esta tarea permite env\u00edos usando el editor de texto y tambi\u00e9n subiendo archivos adjuntos. Introduzca su texto en el siguiente editor y/o use el bot\u00f3n de Examinar o de "Seleccionar ficheros" para incluir otros documentos. <b>Le recomendamos que guarde frecuentemente su trabajo antes de enviar la tarea</b>.
 gen.theassall6=Esta tarea permite los env\u00edos utilizando \u00fanicamente el \u00e1rea de texto. Escriba su env\u00edo y guarde los cambios frecuentemente mientras trabaja.
-gen.yoursubwill=Tu entrega se enviar\u00e1 a {0} para ser revisada de manera electr\u00f3nica respecto al plagio.
-gen.onlythefoll=Solo se aceptar\u00e1n los siguientes tipos de archivo\: {0}
+gen.yoursubwill=Tu entrega se enviar\u00e1 a una herramienta de detecci\u00f3n de plagio para ser revisada.
+gen.onlythefoll=Tipos de archivo que se aceptar\u00e1n\: {0}
 gen.theassinf=Informaci\u00f3n de la tarea
 gen.title=T\u00edtulo
 gen.view2=Mostrar
@@ -690,11 +690,11 @@ downloadall.note=NOTA\: Si cambias entre idiomas en tus preferencias, por ejempl
 uploadall.folders.yes=Guardar los env\u00edos en carpetas de usuario independientes
 uploadall.folders.no=Guardar todas las descargas seleccionadas en una \u00fanica carpeta (esto no podr\u00e1 volver a subirse de nuevo a Tareas)
 
-review.use=Utilizar {0}
+review.use=Usar la herramienta.
 review.switch.ne.1={0} no est\u00e1 disponible para env\u00edos no-electr\u00f3nicos.
 review.switch.ne.2={0} no est\u00e1 disponible para env\u00edos no-electr\u00f3nicos. "Usar Turnitin" se ha deseleccionado m\u00e1s abajo.
-review.allow=Permitir al alumnado revisar el informe
-review.report=Informe de revisi\u00f3n
+review.allow=Permite que los alumnos visualicen el resultado
+review.report=Informe de detecci\u00f3n de plagios
 review.report.expand=Expandir los informes
 review.report.collapse=Contraer los informes
 review.reports=informes
@@ -724,9 +724,9 @@ gen.sorbyreview=Ordenar por revisi\u00f3n
 gen.rev=Revisi\u00f3n
 review.notavail=No disponible todav\u00eda
 review.viewreport=Ver informe
-review.title=Servicio de revision anti plagio {0}
+review.title=Herramienta de Detecci\u00f3n de Plagio
 review.noreport=sin informe
-review.contentReviewIndicator=Se verificar\u00e1 la originalidad de los adjuntos mediante {0}.
+review.contentReviewIndicator=La herramienta de detecci\u00f3n de plagio verificar\u00e1 la originalidad de los ficheros adjuntos.
 
 ## notification email content
 noti.subject.label=Asunto\:
