MSU-18 Afegit gradebook NG com eina de gradebook per defecte

--- a/src/sakai/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
+++ b/src/sakai/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
@@ -59,6 +59,8 @@ sakai.gradebook.testservice.description             = Check Gradebook service
 sakai.gradebook.testservice.title                   = Gradebook Service Test
 sakai.gradebook.tool.description                    = For storing and computing assessment grades from Tests &amp; Quizzes or that are manually entered
 sakai.gradebook.tool.title                          = Gradebook Classic
+sakai.gradebookng.description                   	 = OLD VERSION of the tool for storing and computing assessment grades from Tests &amp; Quizzes or that are manually entered
+sakai.gradebookng.title                          	= Gradebook Classic
 sakai.help.description                              = The Sakai Help Tool
 sakai.help.title                                    = Help Documentation
 sakai.iframe.description                            = For accessing internal resources or an external website within the site.
