--- a/src/sakai/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools_ca.properties
+++ b/src/sakai/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools_ca.properties
@@ -57,8 +57,10 @@ sakai.forums.description=Mostra f\u00f2rums i temes de debat d'un espai concret
 sakai.forums.title=F\u00f2rums
 sakai.gradebook.testservice.description=Verificaci\u00f3 de qualificacions
 sakai.gradebook.testservice.title=Servei de verificaci\u00f3 de qualificacions
-sakai.gradebook.tool.description=Llibre de qualificacions directament introdu\u00efdes o lligades a altres eines
-sakai.gradebook.tool.title=Qualificacions
+sakai.gradebook.tool.description=VERSIÓ ANTIGA del llibre de qualificacions directament introdu\u00efdes o lligades a altres eines
+sakai.gradebook.tool.title=Qualificacions 
+sakai.gradebookng.description=Llibre de qualificacions directament introdu\u00efdes o lligades a altres eines
+sakai.gradebookng.title=Qualificacions
 sakai.help.description=Eina d'ajuda
 sakai.help.title=Documentaci\u00f3 d'ajuda
 sakai.iframe.description=Per poder accedir des de l'espai a recursos interns o a un espai web extern.
