--- a/src/sakai/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools_es.properties
+++ b/src/sakai/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools_es.properties
@@ -57,8 +57,10 @@ sakai.forums.description=Mostrar foros y temas de un sitio concreto
 sakai.forums.title=Foros
 sakai.gradebook.testservice.description=Verificaci\u00f3n de Calificaciones
 sakai.gradebook.testservice.title=Servicio de verificaci\u00f3n de Calificaciones
-sakai.gradebook.tool.description=Almacenamiento y c\u00e1lculo de notas de Ex\u00e1menes o con entrada manual
+sakai.gradebook.tool.description=VERSION ANTIGUA de la heeramienta de almacenamiento y c\u00e1lculo de notas de Ex\u00e1menes o con entrada manual
 sakai.gradebook.tool.title=Calificaciones
+sakai.gradebookng.description=Almacenamiento y c\u00e1lculo de notas de Ex\u00e1menes o con entrada manual
+sakai.gradebookng.title=Calificaciones
 sakai.help.description=Ayuda
 sakai.help.title=Documentaci\u00f3n de ayuda
 sakai.iframe.description=Acceso desde el sitio a archivos de recursos o a un sitio web externo.
