FCV-43 Límite tamaño máximo de fichero en actividades

--- a/src/sakai/assignment/assignment-bundles/resources/assignment_ca.properties
+++ b/src/sakai/assignment/assignment-bundles/resources/assignment_ca.properties
@@ -176,8 +176,9 @@ content_review.error.SUBMISSION_ERROR_RETRY_CODE          = S'ha produ\u00EFt un
 content_review.error.SUBMISSION_ERROR_RETRY_EXCEEDED_CODE = Tots els intents d'enviar aquest adjunt per revisar-ne l'originalitat han fallat. S'ha arribat al nombre l\u00EDmit d'intents. 
 content_review.error.SUBMISSION_ERROR_USER_DETAILS_CODE   = S'ha produ\u00EFt un errir a l'enviar aquest adjunt al servei de revisi\u00F3 de la seva originalitat. Les dades de l'usuari no s\u00F3n v\u00E0lides o s\u00F3n incompletes. 
 content_review.error.createAssignment                     = S''ha produ\u00EFt un error amb {0} quan es creava aquesta activitat. {1} ha desat l''activitat en mode esborrany. Proveu de tornar a enviar aquesta activitat m\u00E9s tard. {2}
-content_review.note                                       = <div><br /><em>NOTA:</em><ul><li>L''estudiantat nom\u00E9s pot adjuntar fitxers dels tipus seg\u00FCents (ATENCI\u00D3: El sistema NO li permetr\u00E0 adjuntar fitxers d''altres tipus): {0}.</li> <li>Els fitxers s''han de desar sempre amb l''extensi\u00F3 apropiada.</li> </ul></div>
+content_review.note                                       = <div><br /><em>NOTA:</em><ul><li>L''estudiantat nom\u00E9s pot adjuntar fitxers dels tipus seg\u00FCents (ATENCI\u00D3: El sistema NO li permetr\u00E0 adjuntar fitxers d''altres tipus): {0}.</li> <li>Els fitxers s''han de desar sempre amb l''extensi\u00F3 apropiada.</li>{1}</ul></div>
 content_review.pending.info                               = El fitxer adjunt s'ha enviat i est\u00E0 pendent de revisi\u00F3.
+plagiarismFileSize                                        = <li>L\u00EDmit m\u00E0xim de c\u00E0rrega: 100Mb per fitxer.</li>
 
 date.allpurpose.releasedate = data de publicaci\u00F3 d'un element corresponent a qualsevol prop\u00F2sit
 date.allpurpose.retractdate = data de retirada d'un element corresponent a qualsevol prop\u00F2sit
