--- a/src/sakai/assignment/assignment-bundles/resources/assignment_es.properties
+++ b/src/sakai/assignment/assignment-bundles/resources/assignment_es.properties
@@ -176,8 +176,9 @@ content_review.error.SUBMISSION_ERROR_RETRY_CODE          = Ocurri\u00F3 un erro
 content_review.error.SUBMISSION_ERROR_RETRY_EXCEEDED_CODE = Todos los intentos de comprobar la originalidad este adjunto han fallado. Se ha llegado al l\u00EDmite de intentos.
 content_review.error.SUBMISSION_ERROR_USER_DETAILS_CODE   = Ocurri\u00F3 un error mientras se entregaba este adjunto al sistema de chequeo de originalidad. Los detalles del usuario son incompletos o inv\u00E1lidos.
 content_review.error.createAssignment                     = Ha sucedido un error con {0} mientras se creaba esta Tarea. {1} ha guardado esta tarea en modo borrador. Por favor, intente enviar de nuevo la tarea m\u00E1s tarde. {2}
-content_review.note                                       = <div><br /><em>NOTA:</em><ul><li>Cuando env\u00EDan ficheros adjuntos, cada estudiante deber\u00EDa usar solo estos tipos de fichero (ATENCI\u00D3N: El sistema NO permitir\u00E1 subir ficheros de otros tipos): {0}.</li> <li>Deber\u00EDan guardar los ficheros con la extensi\u00F3n apropiada.</li> </ul></div>
+content_review.note                                       = <div><br /><em>NOTA:</em><ul><li>Cuando env\u00EDan ficheros adjuntos, cada estudiante deber\u00EDa usar solo estos tipos de fichero (ATENCI\u00D3N: El sistema NO permitir\u00E1 subir ficheros de otros tipos): {0}.</li> <li>Deber\u00EDan guardar los ficheros con la extensi\u00F3n apropiada.</li>{1}</ul></div>
 content_review.pending.info                               = Este adjunto ha sido entregado y se espera su revisi\u00F3n.
+plagiarismFileSize                                        = <li>L\u00EDmite m\u00E1ximo de subida: {0}Mb por archivo.</li>
 
 date.allpurpose.releasedate = fecha liberaci\u00F3n de un elemento de cualquier prop\u00F3sito
 date.allpurpose.retractdate = fecha de retirada de un elemento de cualquier prop\u00F3sito
